manifests/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2proxy
  labels:
    app: oauth2proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2proxy
  template:
    metadata:
      labels:
        app: oauth2proxy
    spec:
      containers:
      - name: oauth2proxy
        image: davidliyutong/oauth2proxy:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2proxy
  labels:
    app: oauth2proxy
spec:
  selector:
    app: oauth2proxy
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2proxy-ingress
  labels:
    app: oauth2proxy
spec:
  tls:
  - hosts:
      - oauth2proxy.example.com
    secretName: oauth2proxy-example-com-tls
  rules:
  - host: "oauth2proxy.example.com"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: oauth2proxy
            port:
              number: 8080
